--- a/styles.css
+++ b/styles.css
@@ -15,33 +15,94 @@ body, html {
 
 .item {
     position: absolute;
-    width: 50px;  /* Adjust size according to your image dimensions */
+    width: 50px;
     height: 50px;
-    background-size: cover;  /* Ensures the image covers the entire div */
-    background-repeat: no-repeat;  /* Avoids repeating the image */
-    border-radius: 50%;  /* Optional: can remove if the image is not round */
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+}
+
+#controls {
+    position: absolute;
+
+    z-index: 1000;
+    text-align: center;
+}
+
+input[type='range'] {
+    appearance: none;
+    width: 120px;
+    height: 10px;
+    
+    background: #333333;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+    transform: rotate(270deg);
+    transform-origin: 100% 50%;
+
+
+    border-radius: 5px;
+
+    background-clip: content-box;
+}
+
+input[type='range']:hover {
+    opacity: 1;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #007bff;
+    cursor: pointer;
+
+    margin-top: -5px;
 }
 
 
-#beginButton {
+#randomnessSlider {
+    position: absolute;
+    top: 30px;
+    left: -80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    z-index: 1;
+}
+#speedSlider {
+    position: absolute;
+    top: 30px;
+    left: -40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    z-index: 1;
+}
+
+#fightButton {
     position: absolute;
     top: 50%;
     left: 50%;
     padding: 10px 20px;
     font-size: 24px;
     cursor: pointer;
-    z-index: 1000; /* Ensure it's on top */
-    background-color: #ffffff;
+    z-index: 1000;
+    background: linear-gradient(to right, #d56bff, #479dff);
     border: none;
     border-radius: 8px;
-    
-    color: #000000;
+    color: #ffffff;
 }
-#beginButton:hover {
+
+#fightButton:hover {
     background: linear-gradient(to right, #479dff, #d56bff);
-    color: #fff;
-    transform: scale(1.1); /* Add a slight scale effect */
-  }
+    color: #ff6363;
+    transform: scale(1.1);
+}
+
 .scissors {
     background-image: url('images/scissors.png');
 }
