--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ input[type='range']::-webkit-slider-thumb {
 #randomnessSlider {
     position: absolute;
     top: 30px;
-    left: -80px;
+    left: -70px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -81,6 +81,28 @@ input[type='range']::-webkit-slider-thumb {
     align-items: flex-start;
     color: white;
     z-index: 1;
+}
+#countSlider {
+    position: absolute;
+    top: 30px;
+    left: -100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    z-index: 1;
+}
+#teamCount {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 36px;
+    font-family: 'Silkscreen', sans-serif;
+    color: #ffffff;
+    text-shadow: 2px 2px 4px #000000;
+    z-index: 1000;
+    margin: 0;
 }
 
 #fightButton {
@@ -102,6 +124,7 @@ input[type='range']::-webkit-slider-thumb {
     color: #ff6363;
     transform: scale(1.1);
 }
+
 
 .scissors {
     background-image: url('images/scissors.png');
